---
title: "Noema — Data Model (Entity Relationship)"
---
erDiagram
    FILES {
        int id PK
        text path UK
        text filename
        text extension
        int size_bytes
        text content_hash
        text mime_type
        text created_at
        text modified_at
        int is_indexed
    }

    CHUNKS {
        int id PK
        int file_id FK
        int chunk_index
        text content
        int token_count
        text heading
        text chunk_type
    }

    CHUNK_EMBEDDINGS {
        int chunk_id PK
        blob embedding "FLOAT[384]"
    }

    ANNOTATIONS {
        int id PK
        int file_id FK
        text note
        text created_at
        text updated_at
    }

    TAGS {
        int id PK
        text name UK
    }

    FILE_TAGS {
        int file_id FK
        int tag_id FK
        text source "user|ai"
    }

    AI_CONTEXT {
        int id PK
        int file_id FK
        int version
        text summary
        text entities "JSON"
        text suggested_tags "JSON"
        text model_id
        int user_edited
    }

    RELATIONSHIPS {
        int id PK
        int source_id FK
        int target_id FK
        text rel_type "similar|duplicate|references|user_linked"
        real strength
    }

    VIRTUAL_FOLDERS {
        int id PK
        text name
        text query_json
        int position
    }

    ACCESS_LOG {
        int id PK
        int file_id FK
        text action "open|modify|preview|search_hit"
        text timestamp
    }

    UNDO_STACK {
        int id PK
        text operation "JSON"
        text created_at
        int expired
    }

    WORKSPACES {
        int id PK
        text name
        text state_json "tabs, layout, sidebar"
        text created_at
        int is_active
    }

    AUTOMATION_RULES {
        int id PK
        text name
        text trigger "JSON: event type + conditions"
        text actions "JSON: what to do"
        int enabled
    }

    FILES ||--o{ CHUNKS : "has many"
    CHUNKS ||--|| CHUNK_EMBEDDINGS : "has one"
    FILES ||--o{ ANNOTATIONS : "has many"
    FILES ||--o{ FILE_TAGS : "tagged with"
    TAGS ||--o{ FILE_TAGS : "applied to"
    FILES ||--o{ AI_CONTEXT : "has versions"
    FILES ||--o{ RELATIONSHIPS : "source"
    FILES ||--o{ RELATIONSHIPS : "target"
    FILES ||--o{ ACCESS_LOG : "tracked"
